--- a/ClientApp/src/main/resources/templates/home.html
+++ b/ClientApp/src/main/resources/templates/home.html
@@ -62,7 +62,7 @@
       background-color: #fff;
       border-top: 2px solid #4CAF50;
       width: 100%;
-      max-width: 800px;
+      max-width: 1000px;
     }
 
     .toolbar a,
@@ -119,7 +119,7 @@
     <a href="/timeslot_create_form">Create Time Slot</a>
     <a href="/view_meetings">My Meetings</a>
     <a href="/my_requests">My Requests</a>
-    <a href="/manage_appointments">Manage Appointments</a>
+    <!-- <a href="/manage_appointments">Manage Appointments</a> -->
     <!-- Add Create Meeting Button -->
     <a href="/meeting_create_form" class="button">Create Meeting</a>
   </div>
