added drop down

--- a/ClientApp/src/main/resources/templates/register_form.html
+++ b/ClientApp/src/main/resources/templates/register_form.html
@@ -82,8 +82,12 @@
       <input type="password" id="password" name="password" required>
     </div>
     <div class="form-group">
-      <label for="role">Role: doctor/patient (please keep lower case )</label>
-      <input type="role" id="role" name="role" required>
+      <label for="role">Role:</label>
+      <select id="role" name="role" required>
+        <option value="doctor" th:text="'Select Status'" disabled selected></option>
+        <option value="doctor">doctor</option>
+        <option value="patient">patient</option>
+      </select>
     </div>
     <button type="submit">Register</button>
   </form>
