--- a/ClientApp/src/main/resources/templates/register_form.html
+++ b/ClientApp/src/main/resources/templates/register_form.html
@@ -84,7 +84,7 @@
     <div class="form-group">
       <label for="role">Role:</label>
       <select id="role" name="role" required>
-        <option value="doctor" th:text="'Select Status'" disabled selected></option>
+        <option value="doctor" th:text="'Select Role'" disabled selected></option>
         <option value="doctor">doctor</option>
         <option value="patient">patient</option>
       </select>
